--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.plantarinn">
+    package="com.example.plantarinn" >
 
     <application
         android:allowBackup="true"
@@ -8,13 +8,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".DisplayMessageActivity"
-            android:parentActivityName=".MainActivity"
+        android:theme="@style/AppTheme" >
+        <activity android:name=".PlantingActivity"
+            android:label="@string/PlantingActivity_appBar_label"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".DisplayMessageActivity"
             android:label="@string/display_message_appBar_label"
-            ></activity>
-
-        <activity android:name=".MainActivity">
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
