Changed layout for plantingGraphics so its responsive(not hardcoded values anymore) and some corresponding changes to how its drawn. Made it so that Plantarinn can only be in portrait mode.

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:theme="@style/AppTheme" >
         <activity android:name=".PlantingActivity"
             android:label="@string/PlantingActivity_appBar_label"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".DisplayMessageActivity"
             android:label="@string/display_message_appBar_label"
