--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.plantarinn" >
+    package="com.example.plantarinn">
+
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -8,17 +10,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".PlantingActivity"
+        android:theme="@style/AppTheme">
+        <service
+            android:name=".PlantingActivityService"
+            android:enabled="true"
+            android:exported="true"></service>
+
+        <activity
+            android:name=".PlantingActivity"
+            android:configChanges="orientation"
             android:label="@string/PlantingActivity_appBar_label"
             android:parentActivityName=".MainActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".DisplayMessageActivity"
             android:label="@string/display_message_appBar_label"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
